# bcb-inflation-control-scraper

./: .flake8  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: UML_diagram.excalidraw
sql/: create_table_mssql.sql  create_table_postgres.sql  entrypoint.sh
src/: main.py
src/config/: db_engine.py  webdriver.py
src/models/: models_historico_taxas_juros.py
src/notebooks/: data_analysis.ipynb  scraper_bacen.ipynb  scraper_bcb.ipynb
src/pipeline/etl/: etl_processor.py  interface_etl_processor.py
src/pipeline/extract/: data_extractor.py  interface_data_extractor.py
src/pipeline/load/: data_loader.py  interface_data_loader.py
src/pipeline/transform/: data_transform.py  interface_data_transform.py
src/utils/: log_decoretor.py  pyodbc_drivers.py  pyodbc_testing.py
